# systems-rag

./: .gitignore  Cargo.toml  Makefile  Readme.md
bpf/: Makefile
bpf/headers/: vmlinux.h
bpf/src/: sysrag.bpf.c
crates/sysrag-cli/: Cargo.toml
crates/sysrag-cli/src/: client.rs  commands.rs  main.rs
crates/sysrag-common/: Cargo.toml
crates/sysrag-common/src/: ipc.rs
crates/sysrag-daemon/: Cargo.toml  build.rs
crates/sysrag-daemon/src/: bpf.rs  main.rs  server.rs
crates/sysrag-daemon/src/llm/: analyzer.rs  mod.rs
crates/sysrag-daemon/src/rag/: embed.rs  mod.rs  store.rs
