[package]
name = "sysrag-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "net"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"

# Link to our shared dictionary
sysrag-common = { path = "../sysrag-common" }